fix: update demo link for GptFileSmith project

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -78,7 +78,7 @@ const projects = [
     tags: ['Astro', 'TailwindCSS', 'OpenAI API'],
     image: GptFileSmith,
     github: 'https://github.com/aleksa-codes/gpt-filesmith',
-    demo: 'https://filesmith.aleksa.io',
+    demo: 'https://filesmith.aleksa.codes',
   },
   {
     title: 'One Dark Modern Pro',
