feat: portfolio ai chat bot

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -4,6 +4,7 @@ import Footer from '@/components/footer.astro';
 import TailwindIndicator from '@/components/tailwind-indicator.astro';
 import BaseHead from '@/components/base-head.astro';
 import Snow from '@/components/snow.astro';
+import AIChat from '@/components/ai-chat.astro';
 
 interface Props {
   title: string;
@@ -45,6 +46,7 @@ const { title, description, image, ogType, schema, noindex, nofollow, twitterCre
       <slot />
     </main>
     <Footer />
+    <AIChat />
     <TailwindIndicator />
   </body>
 </html>
