fix: some SEO tweaks cuz google is a pain

--- a/src/components/ai-chat.astro
+++ b/src/components/ai-chat.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components';
 import Button from '@/components/ui/button.astro';
 ---
 
-<div>
+<div data-nosnippet>
   <!-- Welcome Message Bubble -->
   <div
     id='message-bubble'
