--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -8,7 +8,7 @@
     ></path>
   </svg>
 
-  <div class='flex flex-col items-center justify-center gap-4 bg-slate-200 py-8 dark:bg-slate-800'>
+  <div class='flex flex-col items-center justify-center gap-4 bg-slate-200 py-8 dark:bg-slate-800' data-nosnippet>
     <div class='container flex flex-col items-center gap-4'>
       <p class='font-medium'>
         &copy;&nbsp;<span id='current-year'></span>&nbsp;Code by&nbsp;<a
