fix: update home and about page descriptions

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -158,7 +158,7 @@ const funFacts = [
 
 <Layout
   title='About'
-  description='Learn about my journey as a full-stack web developer, from computer science education to creating modern web applications. Passionate about building innovative digital solutions and user-focused experiences.'
+  description='Learn more about me and my journey into web development, my tech stack, and some fun facts about me.'
 >
   <div class='container space-y-6'>
     <Breadcrumb />
