--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -37,7 +37,7 @@ const readableDate = date.toLocaleDateString('en-us', {
   schema={{
     type: 'BlogPosting',
     date,
-    author,
+    author: author || siteConfig.author,
     tags,
   }}
 >
