fix: update AIChat client directive from load to client:only

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -46,7 +46,7 @@ const { title, description, image, ogType, schema, noindex, nofollow, twitterCre
       <slot />
     </main>
     <Footer />
-    <AIChat client:load />
+    <AIChat client:only='preact' />
     <TailwindIndicator />
   </body>
 </html>
