--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import AnimatedArrow from '@/components/ui/animated-arrow.astro';
     </div>
     <h3 class='text-xl font-semibold'>Computer Science Student and Web Developer.</h3>
     <div class='mx-auto mt-4 h-[275px] w-[275px] sm:h-[350px] sm:w-[350px] md:h-[450px] md:w-[450px]'>
-      <LaptopAnimate size={'100%'} />
+      <LaptopAnimate />
     </div>
   </section>
 </Layout>
